<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dasher</string>
	<string name="settings_name">Dasher Setup</string>

<!-- Setup strings -->
<string name="install_title">1. Install Dasher</string>
<string name="DasherNeedsEnable">1a. First you must enable Dasher as an input method in the system settings. Click below to open the system settings and check the box besides Dasher. (You will be warned about Dasher being able to collect data you enter. Dasher does collect data, in order to learn your writing style, but does not record or learn passwords.)</string>
<string name="IMESettings">Open Input Method Settings</string>
<string name="DasherEnabledOk">1a. Dasher is enabled as an input method. Proceed to next step...</string>
<string name="DasherNeedsSelect">1b. To select Dasher as your active input method, make a long-press in the text field, choose \'Input Method\', then \'Dasher\':</string>
<string name="DasherSelectedOk">1b. Dasher is the active input method; click on button below to open its settings</string>
<string name="dasher_sets_title">2. Dasher Settings</string>
<string name="dasher_sets_desc">Configure how to control Dasher; how fast; in what language you wish to write; and others</string>
<string name="DasherSettingsBtn">Open Dasher Settings</string>

<string name="Reset">Reset to Default</string>

<!--Preference Strings-->
<string name="MaxBitRateTimes100_title">Max speed</string>
<string name="MaxBitRateTimes100_summary">Max rate of data entry in bits/sec</string>
<string name="AndroidDisplaySettings_title">Display Settings</string>
<string name="MinNodeSizeForText_title">Size to have Text</string>
<string name="MinNodeSizeForText_summary">smallest box to have text, 4096=whole screen</string>
<string name="NodeBudget_title">Node budget</string>
<string name="NodeBudget_summary">Higher = more detail; lower = faster</string>
<string name="NonLinearX_title">X Non-linearity</string>
<string name="NonLinearX_summary">Log compress left of crosshair</string>
<string name="DasherFontSize_title">Font Size</string>
<string name="DasherFontSize_summary">Small / medium / large</string>
<string name="MarginWidth_title">Margin Width</string>
<string name="MarginWidth_summary">Space on RHS for finger</string>
<string name="DisplayHeight_title">Display Height %</string>
<string name="DisplayHeight_summary">Compress display vertically to take up less space</string>
<string name="ControlMode_title">Commands</string>
<string name="ControlMode_summary">Generate nodes to perform various actions from within Dasher</string>
<string name="AndroidSettingsNode_title">Settings</string>
<string name="AndroidSettingsNode_summary">Include node for direct access to Dasher Settings</string>
<string name="ControlModeRebuild_title">Rebuild Behind Nodes</string>
<string name="ControlModeRebuild_summary">Replace control nodes that have happened with characters to left of cursor</string>
<string name="ControlModeHasMove_title">Cursor Movement</string>
<string name="ControlModeHasMove_summary">Include nodes to move cursor forwards/back</string>
<string name="ControlMoveRebuildImmed_title">Rebuild Moves Sooner</string>
<string name="ControlMoveRebuildImmed_summaryOn">Replacement occurs after every character moved</string>
<string name="ControlMoveRebuildImmed_summaryOff">Replacement occurs after all movement finished</string>
<string name="ControlModeHasAlphSwitch_title">Alphabet-switching</string>
<string name="ControlModeHasAlphSwitch_summary">Include nodes to switch to previous four alphabets</string>
<string name="ControlModeHasSpeed_title">Speed-changing</string>
<string name="ControlModeHasSpeed_summary">Include nodes to change speed up/down</string>
<string name="AlphabetID_title">Alphabet Name</string>
<string name="AndroidInputMethod_title">Input Mode</string>
<string name="AndroidInputMethod_summary">Choose how to control Dasher</string>
<string name="AndroidTilt_title">Tilt Control</string>
<string name="OneDimensionalMode_title">Use only 1 dimension</string>
<string name="OneDimensionalMode_summaryOff">Fwd/back &amp; up/down using 2 tilt axes</string>
<string name="OneDimensionalMode_summaryOn">Tilt up/down to go in a complete circle</string>
<string name="AndroidTiltHoldToGo_title">Hold finger to go</string>
<string name="AndroidTiltUsesTouchX_title">X Co-ordinate from touch</string>
<string name="CircleStart_title">Start On Circle</string>
<string name="CircleStart_summary">Dwell near screen center to start/stop</string>
<string name="AndroidCalibrateTilting_title">Calibrate Tilting</string>
<string name="AndroidTouch_title">Touch Control</string>
<string name="AndroidTouchUsesTiltX_title">X Co-ordinate from tilting</string>
<string name="TargetOffset_title">Offset Target</string>
<string name="TargetOffset_summary">Above/below actual finger position (400=screen height)</string>
<string name="AutoAdjust_title">Auto-adjust</string>
<string name="AutoAdjust_summary">Learn offset (previous) automatically</string>
<string name="TapTime_title">Max time for \'tap\'</string>
<string name="TapTime_summary">Anything longer counts as drag</string>
<string name="Zoomsteps_title">Frames for tap</string>
<string name="MaxZoom_title">Max zoom for tap</string>
<string name="MaxZoom_summary">Max factor to zoom in upon tap</string>
<string name="AndroidBoxes_title">Box modes</string>
<string name="AndroidBoxes_summary">Divide into boxes and scan or tap</string>
<string name="ButtonMenuBoxes_title">No. of forward boxes</string>
<string name="ButtonMenuSafety_title">Safety margin</string>
<string name="ButtonMenuSafety_summary">Don\'t zoom all the way into box</string>
<string name="ButtonModeNonuniformity_title">Nonuniformity of box sizes</string>
<string name="AndroidScan_title">Scan through boxes</string>
<string name="AndroidScan_summaryOn">Tap screen for highlighted box</string>
<string name="AndroidScan_summaryOff">Tap in box to select</string>
<string name="ButtonScanTime_title">Scanning Time</string>
<string name="ButtonScanTime_summary">0 = tap top half of screen to scan</string>
<string name="AndroidCompass_title">Compass Mode</string>
<string name="AndroidCompass_summary">Control with trackball</string>
<string name="ButtonCompassModeRightZoom_title">Zoom Factor</string>


<!--<string name="AndroidGeneralInputSettings_title">General Input Settings</string>-->
<string name="AutoSpeedControl_title">Auto speed control</string>
<string name="RemapXtreme_title">Remap top/bottom</string>
<string name="RemapXtreme_summary">...to scroll more and zoom less</string>
<string name="AndroidDoubleX_title">Touch on left half only</string>
<string name="AndroidDoubleX_summary">As if finger were twice as far to the right</string>
<string name="SlowStartTime_title">Slow Startup Time</string>
<string name="SlowStartTime_summary">Time to reach full speed (0=straightaway)</string>
<string name="XLimitSpeed_title">Horiz Speed Limit</string>
<string name="XLimitSpeed_summary">Distance from RHS at which you reach maximum speed</string>
<string name="ColourID_title">Colour Scheme</string>
<string name="AndroidTwoButtonDynamic_title">Two-btn Dynamic Mode</string>
<string name="AndroidTwoButtonDynamic_summary">Tap top/bottom or use volume control</string>
<string name="TwoButtonOffset_title">Marker offset</string>
<string name="TwoButtonOffset_summary">Vertical distance to up/down marker</string>
<string name="LongPressTime_title">Long-press time</string>
<string name="LongPressTime_summary">Time for a long-press (=&gt;reverse)</string>
<string name="DoublePressTime_title">Double-press time</string>
<string name="DoublePressTime_summary">Time for two consecutive presses to count as double (=&gt; reverse)</string>
<string name="AndroidOneButtonDynamic_title">One-btn Dynamic Mode</string>
<string name="AndroidOneButtonDynamic_summary">Tap screen or hit any button, twice</string>
<string name="OneButtonShortGap_title">Short gap %age</string>
<string name="OneButtonShortGap_summary">Distance between up markers, as %age of down</string>
<string name="OneButtonLongGap_title">Long gap</string>
<string name="OneButtonLongGap_summary">Distance between down markers</string>
<string name="OneButtonOuter_title">Outer marker</string>
<string name="OneButtonOuter_summary">Distance to outer marker (both up and down)</string>
<string name="OneButtonReleaseTime_title">Use button-release time</string>
<string name="OneButtonReleaseTime_summaryOn">Hold while sentence between markers - short or long press</string>
<string name="OneButtonReleaseTime_summaryOff">Press when sentence passes either marker - short or long gap between two presses</string>
<string name="Orientation_title">Orientation</string>
<string name="Orientation_summary">Override alphabet writing direction</string>
<!--Calibration Strings-->
<string name="invert">Invert</string>
<string name="calibChange">Change...</string>
<array name="Orientation_entries">
<item>Use Alphabet default</item>
<item>Left-to-Right</item>
<item>Right-to-Left</item>
<item>Top-to-Bottom</item>
<item>Bottom-to-Top</item>
</array>
</resources>
